Download featuretypes (#35)
* Download featuretypes

* Improves bad formatting of SwaggerUI response example
